--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><B>HI YA BUDDY<B></B></title>
+    <title><B>HI YA BUDDY</B></title>
 </head>
 
 <body>
