--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><B>HI YA BUDDY</B></title>
+    <title>HI</title>
 </head>
 
 <body>
-    <p>HI</p>
+    <p><B>HI YA BUDDY</B></p>
 </body>
 
 </html>
